Revert "Update _config.yml"
This reverts commit 1a3d96f592ba905a7aed375634d4ed7fcde87d2c.

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Lucas Howard"
 title_separator          : "-"
 name                     : &name "Lucas Howard"
 description              : &description "personal description"
-url                      : lucasjhoward.com/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://lucas-howard-j.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "lucas-howard-j/lucas-howard-j.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
