added profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Lucas J. Howard"
-  avatar           : "profile.png"
+  avatar           : "myprofile.jpg"
   bio              : 
   location         : "Boulder, CO"
   employer         :
